--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "eslint-import-resolver-webpack": "^0.5.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
     "bower": "^1.7.9",
     "chai": "^3.5.0",
     "core-js": "^2.4.1",
+    "css-loader": "^0.24.0",
     "eslint": "^3.3.1",
     "eslint-config-airbnb": "^10.0.1",
     "eslint-import-resolver-webpack": "^0.5.1",
@@ -44,15 +46,14 @@
     "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.1.2",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "grunt": "^1.0.1",
     "grunt-bower-task": "^0.4.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-compress": "^1.3.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-jst": "^1.0.0",
-    "grunt-contrib-sass": "^1.0.0",
     "grunt-exec": "^1.0.0",
     "grunt-karma": "^2.0.0",
     "grunt-text-replace": "^0.4.0",
@@ -73,8 +74,10 @@
     "mocha": "^3.0.2",
     "node-sass": "^3.8.0",
     "phantomjs-prebuilt": "^2.1.12",
+    "postcss-loader": "^0.11.0",
     "sass-loader": "^4.0.0",
     "sinon": "^1.17.5",
+    "style-loader": "^0.13.1",
     "time-grunt": "^1.4.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
