--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "grunt-karma": "^2.0.0",
     "grunt-text-replace": "^0.4.0",
     "grunt-webpack": "^1.0.14",
+    "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
     "karma": "^1.2.0",
     "karma-chai": "^0.1.0",
