--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "style-loader": "^0.13.1",
     "time-grunt": "^1.4.0",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.1"
   },
   "keywords": [
     "npms",
