Pass ENVIRONMENT variables to app
Now we can access travis BUILD
Move more responsibility from replace module to webpack's DEFINE plugin
Extract sensitive information (appsecret, dev URL's) to local environment file .env

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "grunt"
   },
   "dependencies": {
+    "dotenv": "^2.0.0",
     "eslint-import-resolver-webpack": "^0.6.0"
   },
   "devDependencies": {
