--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,10 @@
   "name": "npms-app",
   "version": "0.0.0",
   "dependencies": {
-    "jquery": "latest",
+    "jquery": "^3.1.0",
     "ratchet": "twbs/ratchet#2.0.2",
-    "backbone": "1.1.2",
     "lodash": "3.6.0",
-    "marionette": "2.4.3",
+    "marionette": "3.0.0",
     "backbone.localStorage": "jeromegn/Backbone.localStorage#1.1.16",
     "morel": "Indicia-Team/morel#3.1.3",
     "latlon": "chrisveness/geodesy#d50580b5054b562f0d1c94441f74a9d0bf8ba710",
@@ -14,7 +13,9 @@
     "fastclick": "1.0.3",
     "photoswipe": "4.1.1",
     "hammerjs": "hammerjs/hammer.js",
-    "typeahead.js": "~0.11.1"
+    "typeahead.js": "~0.11.1",
+    "backbone.radio": "^2.0.0",
+    "backbone": "^1.3.3"
   },
   "exportsOverride": {
     "ratchet": {
@@ -35,6 +36,12 @@
     },
     "backbone": {
       "js": "backbone.js"
+    },
+    "backbone.radio": {
+      "js": [
+        "build/backbone.radio.js",
+        "build/backbone.radio.min.js"
+        ]
     },
     "backbone.localStorage": {
       "js": [
