--- a/.eslintrc
+++ b/.eslintrc
@@ -4,16 +4,24 @@
   },
   "extends": "airbnb/base",
   "rules": {
+    "linebreak-style": 0,
+    "prefer-rest-params": 0,
+    "no-fallthrough": 0,
+    "no-case-declarations": 0,
+    "no-console": 0,
+    "no-plusplus": 0,
+    "no-mutable-exports": 0,
     "no-underscore-dangle": 0,
-     "no-unused-expressions": [2, {
-          "allowShortCircuit": true, // eg. a || a()
-          "allowTernary": true // eg. a ? b() : c()
-     }],
+    "no-unused-expressions": [2, {
+      "allowShortCircuit": true, // eg. a || a()
+      "allowTernary": true // eg. a ? b() : c()
+    }],
     "new-cap": ["error", {
       "capIsNewExceptions": ["Log", "UUID"]
     }]
   },
   "globals": {
+    "sinon": true,
     "before": true,
     "beforeEach": true,
     "after": true,
