--- a/package.json
+++ b/package.json
@@ -28,26 +28,24 @@
     "test": "grunt"
   },
   "dependencies": {
-    "dotenv": "^2.0.0",
-    "eslint-import-resolver-webpack": "^0.6.0"
-  },
-  "devDependencies": {
     "autoprefixer": "^6.3.6",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.13.2",
+    "backbone": "^1.3.3",
+    "backbone.localstorage": "^1.1.16",
+    "backbone.marionette": "3.0.0",
+    "backbone.radio": "^2.0.0",
     "bower": "^1.7.9",
-    "chai": "^3.5.0",
+    "circular-dependency-plugin": "^2.0.0",
     "core-js": "^2.4.1",
     "css-loader": "^0.25.0",
-    "eslint": "^3.5.0",
-    "eslint-config-airbnb": "^11.1.0",
+    "dotenv": "^2.0.0",
+    "es6-promise": "^4.0.5",
     "eslint-import-resolver-webpack": "^0.6.0",
-    "eslint-plugin-import": "^1.13.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.1.2",
-    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fastclick": "^1.0.3",
     "file-loader": "^0.9.0",
     "grunt": "^1.0.1",
     "grunt-bower-task": "^0.4.0",
@@ -56,34 +54,65 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jst": "^1.0.0",
     "grunt-exec": "^1.0.0",
-    "grunt-karma": "^2.0.0",
+    "grunt-prompt": "^1.3.3",
     "grunt-text-replace": "^0.4.0",
     "grunt-webpack": "^1.0.14",
+    "hammerjs": "2.0.6",
     "html-webpack-plugin": "^2.22.0",
+    "indexeddbshim": "^2.2.1",
+    "indicia": "Indicia-Team/indicia-js#develop",
+    "jquery": "^3.1.0",
+    "jquery-touchswipe": "^1.6.15",
     "json-loader": "^0.5.4",
-    "karma": "^1.2.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-mocha": "^1.1.1",
-    "karma-mocha-reporter": "^2.1.0",
-    "karma-phantomjs-launcher": "^1.0.1",
-    "karma-sauce-launcher": "^1.0.0",
-    "karma-sinon": "^1.0.5",
-    "karma-webpack": "^1.8.0",
+    "latlon": "github:chrisveness/geodesy#d50580b5054b562f0d1c94441f74a9d0bf8ba710",
+    "leaflet": "^0.7.7",
+    "leaflet.gridref": "github:kazlauskis/Leaflet.GridRef#743575909366cab851e9ad5b2b04213a55495c40",
     "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.5.2",
-    "lodash": "^4.15.0",
-    "mocha": "^3.0.2",
+    "localforage": "^1.4.3",
+    "localforage-cordovasqlitedriver": "^1.5.0",
+    "lodash": "3.6.0",
     "node-sass": "^3.8.0",
-    "phantomjs-prebuilt": "^2.1.12",
+    "os-leaflet": "0.2.1",
+    "photoswipe": "^4.1.1",
     "postcss-loader": "^0.13.0",
+    "proj4": "^2.3.15",
+    "proj4leaflet": "github:kartena/Proj4Leaflet#0.7.2",
+    "ratchet": "github:twbs/ratchet#v2.0.2",
+    "raven-js": "^3.9.1",
     "sass-loader": "^4.0.0",
-    "sinon": "^1.17.5",
     "style-loader": "^0.13.1",
     "time-grunt": "^1.4.0",
+    "typeahead.js": "github:twitter/typeahead.js#v0.11.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-import-resolver-webpack": "^0.6.0",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.2",
+    "express": "^4.14.0",
+    "grunt-karma": "^2.0.0",
+    "karma": "^1.2.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.1.0",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-sauce-launcher": "^1.0.0",
+    "karma-sinon": "^1.0.5",
+    "karma-webpack": "^1.8.0",
+    "lodash": "^4.15.0",
+    "mocha": "^3.0.2",
+    "phantomjs-prebuilt": "^2.1.12",
+    "sinon": "^1.17.5"
   },
   "keywords": [
     "npms",
