--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "hammerjs": "2.0.6",
     "html-webpack-plugin": "^2.22.0",
     "indexeddbshim": "^2.2.1",
-    "indicia": "Indicia-Team/indicia-js#v4.0.0",
+    "indicia": "Indicia-Team/indicia-js#develop",
     "jquery": "^3.1.0",
     "jquery-touchswipe": "^1.6.15",
     "json-loader": "^0.5.4",
@@ -96,21 +96,8 @@
     "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.1.2",
     "express": "^4.14.0",
-    "grunt-karma": "^2.0.0",
-    "karma": "^1.2.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-mocha": "^1.1.1",
-    "karma-mocha-reporter": "^2.1.0",
-    "karma-phantomjs-launcher": "^1.0.1",
-    "karma-safari-launcher": "^1.0.0",
-    "karma-sauce-launcher": "^1.0.0",
-    "karma-sinon": "^1.0.5",
-    "karma-webpack": "^1.8.0",
     "lodash": "^4.15.0",
     "mocha": "^3.0.2",
-    "phantomjs-prebuilt": "^2.1.12",
     "sinon": "^1.17.5"
   },
   "keywords": [
