Set live warehouse config

--- a/package.json
+++ b/package.json
@@ -59,13 +59,13 @@
     "hammerjs": "2.0.6",
     "html-webpack-plugin": "^2.22.0",
     "indexeddbshim": "^2.2.1",
-    "indicia": "Indicia-Team/indicia-js#develop",
+    "indicia": "Indicia-Team/indicia-js#v4.2.2",
     "jquery": "^3.1.0",
     "jquery-touchswipe": "^1.6.15",
     "json-loader": "^0.5.4",
-    "latlon": "github:chrisveness/geodesy#d50580b5054b562f0d1c94441f74a9d0bf8ba710",
+    "latlon": "chrisveness/geodesy#d50580b5054b562f0d1c94441f74a9d0bf8ba710",
     "leaflet": "^0.7.7",
-    "leaflet.gridref": "github:kazlauskis/Leaflet.GridRef#743575909366cab851e9ad5b2b04213a55495c40",
+    "leaflet.gridref": "kazlauskis/Leaflet.GridRef#743575909366cab851e9ad5b2b04213a55495c40",
     "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.5.2",
     "localforage": "^1.4.3",
@@ -76,13 +76,13 @@
     "photoswipe": "^4.1.1",
     "postcss-loader": "^0.13.0",
     "proj4": "^2.3.15",
-    "proj4leaflet": "github:kartena/Proj4Leaflet#0.7.2",
-    "ratchet": "github:twbs/ratchet#v2.0.2",
+    "proj4leaflet": "kartena/Proj4Leaflet#0.7.2",
+    "ratchet": "twbs/ratchet#v2.0.2",
     "raven-js": "^3.9.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "time-grunt": "^1.4.0",
-    "typeahead.js": "github:twitter/typeahead.js#v0.11.1",
+    "typeahead.js": "twitter/typeahead.js#v0.11.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.1"
