--- a/package.json
+++ b/package.json
@@ -25,26 +25,54 @@
     }
   ],
   "scripts": {
-    "test": "grunt"
+    "test": "karma start test/karma.conf.js",
+    "test:watch": "karma start test/karma.conf.js --no-single-run",
+    "test:eslint": "mocha test/eslint-test.js"
   },
   "dependencies": {
+    "backbone": "^1.3.3",
+    "backbone.localstorage": "^1.1.16",
+    "backbone.marionette": "3.0.0",
+    "backbone.radio": "^2.0.0",
+    "es6-promise": "^4.0.5",
+    "fastclick": "^1.0.3",
+    "hammerjs": "2.0.6",
+    "indexeddbshim": "^2.2.1",
+    "indicia": "Indicia-Team/indicia-js#v4.2.5",
+    "jquery": "^3.1.0",
+    "jquery-touchswipe": "^1.6.15",
+    "leaflet": "^0.7.7",
+    "leaflet.gridref": "kazlauskis/Leaflet.GridRef#743575909366cab851e9ad5b2b04213a55495c40",
+    "localforage": "^1.4.3",
+    "localforage-cordovasqlitedriver": "^1.5.0",
+    "lodash": "3.6.0",
+    "os-leaflet": "0.2.1",
+    "photoswipe": "^4.1.1",
+    "proj4": "^2.3.15",
+    "proj4leaflet": "kartena/Proj4Leaflet#0.7.2",
+    "ratchet": "twbs/ratchet#v2.0.2",
+    "raven-js": "^3.9.1",
+    "typeahead.js": "twitter/typeahead.js#v0.11.1"
+  },
+  "devDependencies": {
     "autoprefixer": "^6.3.6",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.13.2",
-    "backbone": "^1.3.3",
-    "backbone.localstorage": "^1.1.16",
-    "backbone.marionette": "3.0.0",
-    "backbone.radio": "^2.0.0",
     "bower": "^1.7.9",
+    "chai": "4.1.2",
     "circular-dependency-plugin": "^2.0.0",
     "core-js": "^2.4.1",
     "css-loader": "^0.25.0",
     "dotenv": "^2.0.0",
-    "es6-promise": "^4.0.5",
+    "eslint": "4.11.0",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-config-prettier": "2.8.0",
+    "eslint-import-resolver-webpack": "0.8.3",
+    "eslint-plugin-import": "2.8.0",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "fastclick": "^1.0.3",
     "file-loader": "^0.9.0",
     "grunt": "^1.0.1",
     "grunt-bower-task": "^0.4.0",
@@ -56,48 +84,30 @@
     "grunt-prompt": "^1.3.3",
     "grunt-text-replace": "^0.4.0",
     "grunt-webpack": "^1.0.14",
-    "hammerjs": "2.0.6",
     "html-webpack-plugin": "^2.22.0",
-    "indexeddbshim": "^2.2.1",
-    "indicia": "Indicia-Team/indicia-js#v4.2.5",
-    "jquery": "^3.1.0",
-    "jquery-touchswipe": "^1.6.15",
     "json-loader": "^0.5.4",
-    "leaflet": "^0.7.7",
-    "leaflet.gridref": "kazlauskis/Leaflet.GridRef#743575909366cab851e9ad5b2b04213a55495c40",
+    "karma": "1.7.1",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "1.3.0",
+    "karma-mocha-reporter": "2.2.4",
+    "karma-sinon": "1.0.5",
+    "karma-webpack": "2.0.4",
     "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.5.2",
-    "localforage": "^1.4.3",
-    "localforage-cordovasqlitedriver": "^1.5.0",
-    "lodash": "3.6.0",
+    "lodash": "^4.15.0",
+    "mocha": "3.5.0",
     "node-sass": "^4.7.2",
-    "os-leaflet": "0.2.1",
-    "photoswipe": "^4.1.1",
     "postcss-loader": "^0.13.0",
-    "proj4": "^2.3.15",
-    "proj4leaflet": "kartena/Proj4Leaflet#0.7.2",
-    "ratchet": "twbs/ratchet#v2.0.2",
-    "raven-js": "^3.9.1",
+    "prettier-eslint": "8.2.2",
     "sass-loader": "^4.0.0",
+    "sinon": "3.2.1",
     "style-loader": "^0.13.1",
     "time-grunt": "^1.4.0",
-    "typeahead.js": "twitter/typeahead.js#v0.11.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.1"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "eslint": "^3.5.0",
-    "eslint-config-airbnb": "^11.1.0",
-    "eslint-import-resolver-webpack": "^0.6.0",
-    "eslint-plugin-import": "^1.13.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.1.2",
-    "express": "^4.14.0",
-    "lodash": "^4.15.0",
-    "mocha": "^3.0.2",
-    "sinon": "^1.17.5"
   },
   "keywords": [
     "npms",
