--- a/package.json
+++ b/package.json
@@ -25,15 +25,28 @@
     }
   ],
   "scripts": {
+    "build": "grunt",
+    "build:update": "grunt udpate",
+    "build:dev": "grunt dev",
+    "build:dev:update": "grunt dev:update",
+    "build:cordova": "grunt cordova",
+    "build:cordova:update": "grunt cordova:update",
+    "build:cordova:android": "grunt cordova:android",
+    "postinstall": "grunt dev",
+    "start": "node config/server.js",
     "test": "karma start test/karma.conf.js",
     "test:watch": "karma start test/karma.conf.js --no-single-run",
-    "test:eslint": "mocha test/eslint-test.js"
+    "test:eslint": "mocha test/eslint-test.js",
+    "clean": "rm -rf node_modules dist yarn.lock package-lock.json",
+    "preversion": "npm test",
+    "postversion": "git push && git push --tags"
   },
   "dependencies": {
     "backbone": "^1.3.3",
     "backbone.localstorage": "^1.1.16",
     "backbone.marionette": "3.0.0",
     "backbone.radio": "^2.0.0",
+    "cordova": "^7.1.0",
     "es6-promise": "^4.0.5",
     "fastclick": "^1.0.3",
     "hammerjs": "2.0.6",
