--- a/package.json
+++ b/package.json
@@ -122,6 +122,10 @@
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.1"
   },
+  "engines": {
+    "node": ">=8",
+    "npm": ">=5"
+  },
   "keywords": [
     "npms",
     "national",
