--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "grunt-text-replace": "^0.4.0",
     "grunt-webpack": "^1.0.14",
     "html-webpack-plugin": "^2.22.0",
+    "husky": "3.0.0",
     "json-loader": "^0.5.4",
     "karma": "1.7.1",
     "karma-chai": "0.1.0",
@@ -121,6 +122,11 @@
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run test && npm run test:eslint"
+    }
   },
   "engines": {
     "node": ">=8",
