--- a/package.json
+++ b/package.json
@@ -6,6 +6,119 @@
   "version": "1.1.0",
   "build": "3",
   "homepage": "http://www.npms.org.uk/",
+  "scripts": {
+    "build": "NODE_ENV=production grunt",
+    "build:update": "NODE_ENV=production grunt update",
+    "build:dev": "grunt",
+    "build:dev:update": "grunt update",
+    "build:cordova": "grunt cordova",
+    "build:cordova:update": "grunt cordova:update",
+    "build:cordova:android": "grunt cordova:android",
+    "postinstall": "grunt",
+    "start": "node other/server.js",
+    "start-dev": "webpack-dev-server --config webpack.config.js --content-base dist/main --port 8000",
+    "test": "karma start test/karma.conf.js",
+    "test:watch": "karma start test/karma.conf.js --no-single-run",
+    "test:eslint": "mocha test/eslint-test.js",
+    "preversion": "npm test",
+    "postversion": "git push && git push --tags"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test && npm run test:eslint"
+    }
+  },
+  "dependencies": {
+    "@babel/polyfill": "7.4.0",
+    "backbone": "^1.3.3",
+    "backbone.localstorage": "^1.1.16",
+    "backbone.marionette": "3.0.0",
+    "backbone.radio": "^2.0.0",
+    "cordova": "8.1.2",
+    "core-js": "3.0.1",
+    "fastclick": "^1.0.3",
+    "hammerjs": "2.0.6",
+    "indicia": "Indicia-Team/indicia-js#v4.2.5",
+    "jquery": "^3.1.0",
+    "jquery-touchswipe": "^1.6.15",
+    "localforage": "^1.4.3",
+    "localforage-cordovasqlitedriver": "^1.5.0",
+    "lodash": "4.17.11",
+    "photoswipe": "^4.1.1",
+    "ratchet": "twbs/ratchet#v2.0.2",
+    "raven-js": "3.22.1",
+    "typeahead.js": "twitter/typeahead.js#v0.11.1"
+  },
+  "devDependencies": {
+    "@babel/core": "7.4.0",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-decorators": "7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-exponentiation-operator": "7.2.0",
+    "@babel/preset-env": "7.4.2",
+    "autoprefixer": "7.1.4",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.5",
+    "chai": "4.1.2",
+    "chromedriver": "2.34.1",
+    "circular-dependency-plugin": "4.2.0",
+    "css-loader": "1.0.0",
+    "csv": "1.1.1",
+    "dotenv": "4.0.0",
+    "ejs-loader": "0.3.1",
+    "eslint": "5.9.0",
+    "eslint-config-airbnb-base": "13.2.0",
+    "eslint-config-prettier": "4.0.0",
+    "eslint-import-resolver-webpack": "0.11.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "express": "4.15.4",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.11",
+    "grunt": "1.0.1",
+    "grunt-cli": "1.2.0",
+    "grunt-contrib-clean": "1.1.0",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-jst": "^1.0.0",
+    "grunt-exec": "3.0.0",
+    "grunt-prompt": "1.3.3",
+    "grunt-text-replace": "0.4.0",
+    "grunt-webpack": "3.1.3",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "3.0.0",
+    "json-loader": "0.5.7",
+    "karma": "2.0.5",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage": "1.1.1",
+    "karma-mocha": "1.3.0",
+    "karma-mocha-reporter": "2.2.4",
+    "karma-sinon": "1.0.5",
+    "karma-webpack": "3.0.0",
+    "load-grunt-config": "0.19.2",
+    "load-grunt-tasks": "3.5.2",
+    "mini-css-extract-plugin": "0.7.0",
+    "mocha": "3.5.0",
+    "node-sass": "4.11.0",
+    "postcss-loader": "2.1.6",
+    "prettier-eslint": "8.8.2",
+    "prettier-eslint-cli": "4.7.1",
+    "sass-loader": "7.1.0",
+    "sinon": "5.0.7",
+    "string-replace-loader": "^2.1.1",
+    "style-loader": "0.21.0",
+    "time-grunt": "1.4.0",
+    "url-loader": "1.0.1",
+    "webpack": "4.22.0",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "4.1.4"
+  },
+  "engines": {
+    "node": "10",
+    "npm": "6"
+  },
   "author": {
     "name": "Karolis Kazlauskis",
     "email": "karkaz@ceh.ac.uk",
@@ -24,114 +137,6 @@
       "url": "http://www.gnu.org/licenses/gpl.html"
     }
   ],
-  "scripts": {
-    "build": "grunt",
-    "build:update": "grunt udpate",
-    "build:dev": "grunt dev",
-    "build:dev:update": "grunt dev:update",
-    "build:cordova": "grunt cordova",
-    "build:cordova:update": "grunt cordova:update",
-    "build:cordova:android": "grunt cordova:android",
-    "postinstall": "grunt dev",
-    "start": "node config/server.js",
-    "test": "karma start test/karma.conf.js",
-    "test:watch": "karma start test/karma.conf.js --no-single-run",
-    "test:eslint": "mocha test/eslint-test.js",
-    "clean": "rm -rf node_modules dist yarn.lock package-lock.json",
-    "preversion": "npm test",
-    "postversion": "git push && git push --tags"
-  },
-  "dependencies": {
-    "backbone": "^1.3.3",
-    "backbone.localstorage": "^1.1.16",
-    "backbone.marionette": "3.0.0",
-    "backbone.radio": "^2.0.0",
-    "cordova": "^7.1.0",
-    "es6-promise": "^4.0.5",
-    "fastclick": "^1.0.3",
-    "hammerjs": "2.0.6",
-    "indexeddbshim": "^2.2.1",
-    "indicia": "Indicia-Team/indicia-js#v4.2.5",
-    "jquery": "^3.1.0",
-    "jquery-touchswipe": "^1.6.15",
-    "leaflet": "^0.7.7",
-    "leaflet.gridref": "kazlauskis/Leaflet.GridRef#743575909366cab851e9ad5b2b04213a55495c40",
-    "localforage": "^1.4.3",
-    "localforage-cordovasqlitedriver": "^1.5.0",
-    "lodash": "3.6.0",
-    "os-leaflet": "0.2.1",
-    "photoswipe": "^4.1.1",
-    "proj4": "^2.3.15",
-    "proj4leaflet": "kartena/Proj4Leaflet#0.7.2",
-    "ratchet": "twbs/ratchet#v2.0.2",
-    "raven-js": "^3.9.1",
-    "typeahead.js": "twitter/typeahead.js#v0.11.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.5",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.13.2",
-    "bower": "^1.7.9",
-    "chai": "4.1.2",
-    "circular-dependency-plugin": "^2.0.0",
-    "core-js": "^2.4.1",
-    "css-loader": "^0.25.0",
-    "dotenv": "^2.0.0",
-    "eslint": "4.11.0",
-    "eslint-config-airbnb-base": "12.1.0",
-    "eslint-config-prettier": "2.8.0",
-    "eslint-import-resolver-webpack": "0.8.3",
-    "eslint-plugin-import": "2.8.0",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "grunt": "^1.0.1",
-    "grunt-bower-task": "^0.4.0",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jst": "^1.0.0",
-    "grunt-exec": "^1.0.0",
-    "grunt-prompt": "^1.3.3",
-    "grunt-text-replace": "^0.4.0",
-    "grunt-webpack": "^1.0.14",
-    "html-webpack-plugin": "^2.22.0",
-    "husky": "3.0.0",
-    "json-loader": "^0.5.4",
-    "karma": "1.7.1",
-    "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "1.3.0",
-    "karma-mocha-reporter": "2.2.4",
-    "karma-sinon": "1.0.5",
-    "karma-webpack": "2.0.4",
-    "load-grunt-config": "^0.19.2",
-    "load-grunt-tasks": "^3.5.2",
-    "lodash": "^4.15.0",
-    "mocha": "3.5.0",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^0.13.0",
-    "prettier-eslint": "8.2.2",
-    "sass-loader": "^4.0.0",
-    "sinon": "3.2.1",
-    "style-loader": "^0.13.1",
-    "time-grunt": "^1.4.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run test && npm run test:eslint"
-    }
-  },
-  "engines": {
-    "node": ">=8",
-    "npm": ">=5"
-  },
   "keywords": [
     "npms",
     "national",
