--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,17 @@
 language: node_js
 node_js:
-  - "10"
+  - "8.1.4"
 before_install:
   - npm install
   - npm rebuild wd
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+services:
+  - xvfb
 script:
   - npm test
   - npm run test:eslint
+addons:
+  chrome: stable
 notifications:
   email: true
 sudo: false
 
-addons:
-  sauce_connect: true
