--- a/package.json
+++ b/package.json
@@ -24,91 +24,92 @@
     }
   },
   "dependencies": {
-    "@babel/polyfill": "7.4.0",
+    "@babel/polyfill": "^7.10.1",
+    "@sentry/browser": "^5.17.0",
     "backbone": "^1.3.3",
     "backbone.localstorage": "^1.1.16",
     "backbone.marionette": "3.0.0",
     "backbone.radio": "^2.0.0",
-    "cordova": "8.1.2",
-    "core-js": "3.0.1",
+    "cordova": "^9.0.0",
+    "core-js": "^3.6.5",
     "fastclick": "^1.0.3",
-    "hammerjs": "2.0.6",
-    "indicia": "Indicia-Team/indicia-js#v4.2.5",
-    "jquery": "^3.1.0",
+    "hammerjs": "^2.0.8",
+    "indicia": "github:Indicia-Team/indicia-js#v4.2.5",
+    "jquery": "^3.5.1",
     "jquery-touchswipe": "^1.6.15",
-    "localforage": "^1.4.3",
+    "localforage": "^1.7.4",
     "localforage-cordovasqlitedriver": "^1.5.0",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
     "photoswipe": "^4.1.1",
-    "ratchet": "twbs/ratchet#v2.0.2",
-    "raven-js": "3.22.1",
-    "typeahead.js": "twitter/typeahead.js#v0.11.1"
+    "ratchet": "github:twbs/ratchet#v2.0.2",
+    "typeahead.js": "github:twitter/typeahead.js#v0.11.1"
   },
   "devDependencies": {
-    "@babel/core": "7.4.0",
-    "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-proposal-decorators": "7.4.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-exponentiation-operator": "7.2.0",
-    "@babel/preset-env": "7.4.2",
-    "autoprefixer": "7.1.4",
-    "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.5",
-    "chai": "4.1.2",
-    "chromedriver": "2.34.1",
-    "circular-dependency-plugin": "4.2.0",
-    "css-loader": "1.0.0",
-    "csv": "1.1.1",
-    "dotenv": "4.0.0",
-    "ejs-loader": "0.3.1",
-    "eslint": "5.9.0",
-    "eslint-config-airbnb-base": "13.2.0",
-    "eslint-config-prettier": "4.0.0",
-    "eslint-import-resolver-webpack": "0.11.0",
-    "eslint-plugin-import": "2.16.0",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-exponentiation-operator": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@flumens/has-env": "^1.0.0",
+    "autoprefixer": "^9.8.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "chai": "^4.2.0",
+    "chromedriver": "^83.0.0",
+    "circular-dependency-plugin": "^5.2.0",
+    "css-loader": "^3.6.0",
+    "csv": "^5.3.2",
+    "dotenv": "^8.2.0",
+    "ejs-loader": "^0.5.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "7.12.4",
-    "express": "4.15.4",
+    "eslint-plugin-react": "^7.20.0",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.11",
-    "grunt": "1.0.1",
-    "grunt-cli": "1.2.0",
-    "grunt-contrib-clean": "1.1.0",
+    "file-loader": "^6.0.0",
+    "grunt": "^1.1.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-jst": "^1.0.0",
     "grunt-exec": "3.0.0",
     "grunt-prompt": "1.3.3",
     "grunt-text-replace": "0.4.0",
     "grunt-webpack": "3.1.3",
-    "html-webpack-plugin": "3.2.0",
-    "husky": "3.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
     "json-loader": "0.5.7",
-    "karma": "2.0.5",
+    "karma": "^5.1.0",
     "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage": "1.1.1",
-    "karma-mocha": "1.3.0",
-    "karma-mocha-reporter": "2.2.4",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.2",
+    "karma-mocha": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-sinon": "1.0.5",
-    "karma-webpack": "3.0.0",
-    "load-grunt-config": "0.19.2",
-    "load-grunt-tasks": "3.5.2",
-    "mini-css-extract-plugin": "0.7.0",
-    "mocha": "3.5.0",
-    "node-sass": "4.11.0",
-    "postcss-loader": "2.1.6",
-    "prettier-eslint": "8.8.2",
-    "prettier-eslint-cli": "4.7.1",
-    "sass-loader": "7.1.0",
-    "sinon": "5.0.7",
-    "string-replace-loader": "^2.1.1",
-    "style-loader": "0.21.0",
-    "time-grunt": "1.4.0",
-    "url-loader": "1.0.1",
-    "webpack": "4.22.0",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "^3.3.1",
-    "webpack-merge": "4.1.4"
+    "karma-webpack": "^4.0.2",
+    "load-grunt-config": "^3.0.1",
+    "load-grunt-tasks": "^5.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "mocha": "^8.0.1",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "prettier-eslint": "^11.0.0",
+    "prettier-eslint-cli": "^5.0.0",
+    "sass-loader": "^8.0.2",
+    "sinon": "^9.0.2",
+    "string-replace-loader": "^2.3.0",
+    "style-loader": "^1.2.1",
+    "time-grunt": "^2.0.0",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
   },
   "engines": {
     "node": "10",
