--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,9 @@ jobs:
           node-version: '10'
       - run: npm install
       
+      - run: npm run test
+      - run: npm run test:eslint
+
       - run: npm run build
         env:
           APP_SENTRY_KEY: ${{ secrets.APP_SENTRY_KEY }}
