--- a/other/now.json
+++ b/other/now.json
@@ -2,10 +2,10 @@
   "version": 2,
   "builds": [
     { "src": "./dist/main/**", "use": "@now/static" },
-    { "src": "./config/demo.html", "use": "@now/static" }
+    { "src": "./other/demo.html", "use": "@now/static" }
   ],
   "routes": [
-    { "src": "^/demo.html", "dest": "config/demo.html" },
+    { "src": "^/demo.html", "dest": "other/demo.html" },
     { "src": "^/(.*)", "dest": "dist/main/$1" }
   ]
 }
