--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "chai": "^4.2.0",
     "chromedriver": "^83.0.0",
     "circular-dependency-plugin": "^5.2.0",
+    "cordova-res": "^0.15.0",
     "css-loader": "^3.6.0",
     "csv": "^5.3.2",
     "dotenv": "^8.2.0",
@@ -98,6 +99,7 @@
     "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.0",
     "sass-loader": "^8.0.2",
+    "sharp-cli": "^1.14.1",
     "sinon": "^9.0.2",
     "string-replace-loader": "^2.3.0",
     "style-loader": "^1.2.1",
