--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,6 +19,10 @@ jobs:
       - run: npm install
       
       - run: npm run test
+        env:
+          APP_SENTRY_KEY: ${{ secrets.APP_SENTRY_KEY }}
+          APP_INDICIA_API_KEY: ${{ secrets.APP_INDICIA_API_KEY }}
+        
       - run: npm run test:eslint
 
       - run: npm run build
