--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '10'
+      
+      - run: sudo apt-get -yqq install chromium
       - run: npm install
       
       - run: npm run test
