--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: '10'
       
-      - run: sudo apt-get -yqq install chromium
+      - run: sudo apt-get -yqq install chromium-browser
       - run: npm install
       
       - run: npm run test
