Upgrade webpack, eslint and other.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,22 @@
 .DS_Store
 .idea
 .sass-cache
-.npm-debug.log
-dist
-node_modules
 .env*
 *.patch
 .vscode
 **/*pyc
 .vercel
 karma-chrome
+node_modules/
+dist/
+cordova/
+build/
+/components
+/resources
+/backend
+!.env.example
+coverage
+.nowbuild
+.now
+.npm-debug.log
+.gradle
