--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "id": "uk.ac.ceh.npms",
   "title": "NPMS App",
   "description": "NPMS application.",
-  "version": "1.3.0",
-  "build": "3",
+  "version": "1.4.0",
   "homepage": "http://www.npms.org.uk/",
   "scripts": {
-    "build": "grunt",
-    "build:production": "grunt cordova && grunt cordova:android",
-    "deploy": "vercel --prod -A other/now.json",
-    "start": "webpack-dev-server --config webpack.config.js --content-base dist/main --port 8000",
-    "clean": "rm -rf dist",
+    "start": "webpack serve --progress --content-base build --port 8000",
+    "build": "grunt jst && webpack",
+    "build:production": "grunt",
+    "deploy": "vercel --prod -A other/now.json -t $VERCEL_TOKEN --confirm",
+    "deploy:production": "echo 'NOTHING HERE :('",
     "test": "karma start test/karma.conf.js",
+    "clean": "rm -rf build && rm -rf resources && rm -rf cordova",
     "test:watch": "karma start test/karma.conf.js --no-single-run",
-    "test:eslint": "mocha test/eslint-test.js"
+    "test:eslint": "eslint src --quiet --ext .jsx --ext .js && echo '\\033[37;42;1m PASS \\033[00m'"
   },
   "husky": {
     "hooks": {
@@ -31,6 +31,7 @@
     "cordova": "^9.0.0",
     "core-js": "^3.6.5",
     "fastclick": "^1.0.3",
+    "geodesy": "^2.2.1",
     "hammerjs": "^2.0.8",
     "indicia": "github:Indicia-Team/indicia-js#v4.2.5",
     "jquery": "^3.5.1",
@@ -40,6 +41,7 @@
     "lodash": "^4.17.15",
     "photoswipe": "^4.1.1",
     "ratchet": "github:twbs/ratchet#v2.0.2",
+    "regenerator-runtime": "^0.13.7",
     "typeahead.js": "github:twitter/typeahead.js#v0.11.1"
   },
   "devDependencies": {
@@ -48,41 +50,35 @@
     "@babel/plugin-proposal-decorators": "^7.10.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-exponentiation-operator": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "@flumens/has-env": "^1.0.0",
+    "@babel/preset-env": "7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "@flumens/eslint-config": "^0.4.0",
+    "@flumens/webpack-config": "2.1.0",
     "autoprefixer": "^9.8.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "8.2.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "chai": "^4.2.0",
     "chromedriver": "^83.0.0",
     "circular-dependency-plugin": "^5.2.0",
     "cordova-res": "^0.15.0",
-    "css-loader": "^3.6.0",
+    "css-loader": "^5.2.0",
     "csv": "^5.3.2",
     "dotenv": "^8.2.0",
-    "ejs-loader": "^0.5.0",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-import-resolver-webpack": "^0.12.2",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.20.0",
-    "express": "^4.17.1",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "^6.0.0",
-    "grunt": "^1.1.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-copy": "1.0.0",
+    "eslint": "7.23.0",
+    "eslint-import-resolver-babel-module": "5.2.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "^24.3.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.1",
+    "file-loader": "^6.2.0",
+    "grunt": "1.3.0",
+    "grunt-cli": "1.4.2",
     "grunt-contrib-jst": "^1.0.0",
     "grunt-exec": "3.0.0",
-    "grunt-prompt": "1.3.3",
     "grunt-text-replace": "0.4.0",
-    "grunt-webpack": "3.1.3",
-    "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
-    "json-loader": "0.5.7",
+    "jest": "^26.6.3",
     "karma": "^5.1.0",
     "karma-chai": "0.1.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -90,35 +86,128 @@
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sinon": "1.0.5",
-    "karma-webpack": "^4.0.2",
+    "karma-webpack": "^5.0.0",
     "load-grunt-config": "^3.0.1",
     "load-grunt-tasks": "^5.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^8.0.1",
-    "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
-    "prettier-eslint": "^11.0.0",
-    "prettier-eslint-cli": "^5.0.0",
-    "sass-loader": "^8.0.2",
+    "node-sass": "^5.0.0",
+    "puppeteer": "^8.0.0",
+    "postcss-loader": "^5.2.0",
+    "prettier-eslint": "12.0.0",
+    "prettier-eslint-cli": "5.0.1",
+    "sass-loader": "^11.0.1",
     "sharp-cli": "^1.14.1",
     "sinon": "^9.0.2",
-    "string-replace-loader": "^2.3.0",
-    "style-loader": "^1.2.1",
-    "time-grunt": "^2.0.0",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "vercel": "21.2.2",
+    "webpack": "5.30.0",
+    "webpack-cli": "4.6.0",
+    "webpack-dev-server": "3.11.2"
   },
   "engines": {
-    "node": "10",
-    "npm": "6"
+    "node": ">=12",
+    "npm": ">=6"
   },
   "author": {
-    "name": "Karolis Kazlauskis",
-    "email": "karkaz@ceh.ac.uk",
-    "url": "http://brc.ac.uk"
+    "name": "Flumens",
+    "email": "enquiries@flumens.io",
+    "url": "https://flumens.io"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react",
+      [
+        "@babel/env",
+        {
+          "targets": {
+            "android": "5.1",
+            "ios": "10.2"
+          },
+          "modules": "commonjs",
+          "corejs": "3.0.0",
+          "useBuiltIns": "usage"
+        }
+      ]
+    ],
+    "plugins": [
+      [
+        "module-resolver",
+        {
+          "root": [
+            "./src"
+          ],
+          "alias": {
+            "radio": "./src/common/radio",
+            "typeahead": "typeahead.js/dist/typeahead.jquery",
+            "bootstrap": "bootstrap/js/bootstrap",
+            "ratchet": "ratchet/dist/js/ratchet",
+            "photoswipe-lib": "photoswipe/dist/photoswipe",
+            "photoswipe-ui-default": "photoswipe/dist/photoswipe-ui-default",
+            "JST": "./src/JST",
+            "common": "./src/common",
+            "helpers": "./src/common/helpers",
+            "models": "./src/common/models",
+            "app_model": "./src/common/models/app_model",
+            "user_model": "./src/common/models/user_model",
+            "sample": "./src/common/models/sample",
+            "occurrence": "./src/common/models/occurrence",
+            "saved_samples": "./src/common/saved_samples",
+            "config": "./src/common/config/config",
+            "Components": "./src/common/Components"
+          }
+        }
+      ],
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ],
+      "@babel/plugin-transform-exponentiation-operator",
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        }
+      ],
+      "@babel/plugin-syntax-dynamic-import"
+    ]
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true
+    },
+    "parser": "babel-eslint",
+    "extends": "@flumens",
+    "settings": {
+      "import/resolver": {
+        "babel-module": {}
+      }
+    },
+    "rules": {
+      "no-case-declarations": 0,
+      "jsx-a11y/accessible-emoji": 0,
+      "@getify/proper-arrows/name": 0,
+      "react/jsx-filename-extension": 0,
+      "jest/no-done-callback": 0,
+      "jest/expect-expect": 0,
+      "jest/valid-expect": 0
+    },
+    "globals": {
+      "t": true,
+      "cordova": true,
+      "before": true,
+      "JST": true,
+      "after": true,
+      "sinon": true
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "singleQuote": true,
+    "jsxBracketSameLine": false,
+    "trailingComma": "es5",
+    "arrowParens": "avoid"
   },
   "repository": {
     "type": "git",
